fix some spacing issues above contact section

--- a/src/assets/sass/_base.sass
+++ b/src/assets/sass/_base.sass
@@ -1,5 +1,7 @@
 body
   font-family: 'Open Sans', sans-serif
+  a
+    color: #ffb54f
 
 
 //LANDING
