--- a/src/assets/sass/_layout.sass
+++ b/src/assets/sass/_layout.sass
@@ -41,7 +41,7 @@
 //PROJECTS
 .projects-wrap
   width: 90%
-  margin: 0 auto 50px
+  margin: 0 auto 30px
 
   h3
     text-align: center
@@ -64,6 +64,9 @@
   flex-direction: column
   justify-content: center
   align-items: center
+
+  a
+    font-size: 1.2em
 
 //FOOTER
 .footer-wrap
